--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,9 @@
 name: Crave Builder
 on:
     workflow_dispatch:
-        # Various inputs to simplify usage of workflow.
         inputs:
             BASE_PROJECT:
-                description: "Choose a base project:"
+                description: "Choose Base Project:"
                 required: true
                 default: "LineageOS 20.0"
                 type: choice
@@ -27,43 +26,43 @@ on:
                     - "LineageOS 16.0"
                     - "CyanogenMOD 14.1"
             BUILD_DIFFERENT_ROM:
-                description: "Command to initialize a different 'repo' project:"
+                description: "Initialize Command For Different Project:"
                 required: false
                 default: "echo 'Build Starting!'"
             REMOVALS:
-                description: "Folders to be removed before syncing:"
+                description: "Cleanup Directories Before Syncing:"
                 required: false
             LOCAL_MANIFEST:
-                description: "Personal local manifest [repository or raw]:"
+                description: "Local Manifest:"
                 required: true
-                default: "https://github.com/sounddrill31/local_manifests"
+                default: "https://github.com/kajal4414/local_manifests.git"
             LOCAL_MANIFEST_BRANCH:
-                description: "Personal local manifest's branch:"
+                description: "Local Manifest Branch:"
                 required: false
-                default: "lineage-oxygen"
+                default: "lineage-20"
             DEVICE_NAME:
-                description: "Device's codename:"
+                description: "Device Name:"
                 required: true
-                default: "oxygen"
+                default: "spes"
             PRODUCT_NAME:
-                description: "Product to build:"
+                description: "Product Name:"
                 required: true
-                default: "lineage_oxygen"
+                default: "lineage_spes"
             BUILD_COMMAND:
-                description: "Command to be used for compiling:"
+                description: "Build Command:"
                 required: true
                 default: "mka bacon"
             BUILD_TYPE:
-                description: "Type of build:"
+                description: "Build Variant:"
                 required: true
-                default: "userdebug"
+                default: "user"
                 type: choice
                 options:
                     - "eng"
                     - "userdebug"
                     - "user"
             CLEAN_BUILD:
-                description: "Build with a clean workspace?"
+                description: "Perform Clean Build?"
                 required: true
                 default: "no"
                 type: choice
@@ -73,7 +72,7 @@ on:
 
 jobs:
     prepare:
-        name: Prepare for Building
+        name: Build Preparation
         runs-on: ubuntu-latest
         steps:
             - name: Set Project variables
@@ -84,7 +83,6 @@ jobs:
                     export PROJECTFOLDER="/crave-devspaces/Arrow13"
                     export PROJECTID="73"
                     export REPO_INIT="repo init -u https://github.com/ArrowOS/android_manifest.git -b arrow-13.1 --depth=1"
-
                   ;;
                   "DerpFest 13.0")
                     export PROJECTFOLDER="/crave-devspaces/DerpFest13"
@@ -99,7 +97,7 @@ jobs:
                   "LineageOS 20.0")
                     export PROJECTFOLDER="/crave-devspaces/Lineage20"
                     export PROJECTID="36"
-                    export REPO_INIT="repo init -u https://github.com/accupara/los20.git -b lineage-20.0 --git-lfs --depth=1"
+                    export REPO_INIT="repo init -u https://github.com/LineageOS/android.git -b lineage-20.0 --git-lfs --depth=1"
                   ;;
                   "CipherOS 14")
                     export PROJECTFOLDER="/crave-devspaces/Cipher14"
@@ -138,13 +136,14 @@ jobs:
                     LUNCH="breakfast ${{ github.event.inputs.PRODUCT_NAME }} ${{ github.event.inputs.BUILD_TYPE }}"
                   fi
 
-                  echo "Building on ${{ github.event.inputs.BASE_PROJECT }} project"
+                  echo "Building ${{ github.event.inputs.BASE_PROJECT }}"
                   echo "PROJECTFOLDER=$PROJECTFOLDER" >> "$GITHUB_OUTPUT"
                   echo "PROJECTID=$PROJECTID"  >> "$GITHUB_OUTPUT"
                   echo "REPO_INIT=$REPO_INIT" >> "$GITHUB_OUTPUT"
                   echo "LUNCH=$LUNCH" >> "$GITHUB_ENV"
                   echo "LUNCH=$LUNCH" >> "$GITHUB_OUTPUT"
-            - name: Display Run Parameters # Credit to azwhikaru for this part
+
+            - name: Display Run Parameters
               run: |
                   echo "::group::User Environment Variables"
                   echo "Base Project: ${{ github.event.inputs.BASE_PROJECT }}"
@@ -158,13 +157,14 @@ jobs:
                   echo "Clean Build: ${{ github.event.inputs.CLEAN_BUILD }}"
                   echo "::endgroup::"
 
-                  echo "Displaying Local Manifests"
                   if [[ -z "${{ secrets.DISPLAY_FALSE }}" ]]; then
                     git clone ${{ github.event.inputs.LOCAL_MANIFEST }} --depth 1 -b ${{ github.event.inputs.LOCAL_MANIFEST_BRANCH }} local_manifests
+                    echo "Displaying Local Manifests"
                     cat local_manifests/*.xml
                   else
                     echo "Displaying is disabled through secrets."
                   fi
+
         outputs:
             PROJECTFOLDER: ${{ steps.proj-variables.outputs.PROJECTFOLDER }}
             PROJECTID: ${{ steps.proj-variables.outputs.PROJECTID }}
@@ -176,7 +176,6 @@ jobs:
         needs: prepare
         runs-on: ubuntu-latest
         steps:
-            # Accept Project Variables
             - name: Set Repo Project
               run: |
                   PROJECTFOLDER="${{ needs.prepare.outputs.PROJECTFOLDER }}"
@@ -189,39 +188,28 @@ jobs:
                   echo "REPO_INIT=$REPO_INIT" >> "$GITHUB_ENV"
                   echo "LUNCH=$LUNCH" >> "$GITHUB_ENV"
 
-              # Download and configure 'repo'.
-            - name: Configure the 'repo' environment
+            - name: Configure Repository Environment
               run: |
-                  # Check if repo is already installed
                   if ! command -v repo >/dev/null 2>&1; then
-                    echo "Repo not found. Installing now..."
-                    # Create bin directory if it doesn't exist
+                    echo "Repo Not Found. Installing Now..."
                     mkdir -p ~/bin
-                    # Download repo script
-                    curl https://storage.googleapis.com/git-repo-downloads/repo >> ~/bin/repo
-                    # Make repo script executable
-                    chmod a+x ~/bin/repo
-                    # Create symbolic link to /usr/bin/repo
+                    curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo
+                    chmod a+rx ~/bin/repo
                     sudo ln -sf "/home/$(whoami)/bin/repo" "/usr/bin/repo"
-                    echo "Repo installation complete."
                   else
-                    echo "Repo already installed."
+                    echo "Repo Already Installed."
                   fi
               continue-on-error: true
 
-              # Generate 'git' credential in base of the workflow's author.
-            - name: Set-up 'git' credential(s)
+            - name: Configure Git Credentials
               run: |
                   git config --global user.name "${{ github.actor }}"
                   git config --global user.email "${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com"
 
-              # Test Your Personal 'Local Manifests' against The ROM
             - name: Test Local Manifests
               if: ${{ github.event.inputs.BUILD_DIFFERENT_ROM != 'skip' }}
               run: |
-                  rm -rf tester
-                  mkdir tester
-                  cd tester
+                  rm -rf tester && mkdir tester && cd tester
                   if [ "${{ github.event.inputs.BUILD_DIFFERENT_ROM }}" == "echo 'Build Starting!'" ]; then
                     $REPO_INIT
                   else
@@ -231,13 +219,14 @@ jobs:
 
                   if [ ! $? == 0 ]; then \
                     curl -o .repo/local_manifests ${{ github.event.inputs.LOCAL_MANIFEST }}; \
-                    echo "Git clone failed, downloading through curl instead..."; \
+                    echo "Git Clone Failed, Downloading Through curl Instead..."; \
                   fi \
 
                   timeout 1m repo sync --force-sync || { exit_code=$?; [ $exit_code -eq 124 ] || (echo "Error: Process failed with exit code $exit_code"; exit $exit_code); }
-                  du -csh . # Output Size when done
+                  du -csh
                   rm -rf .repo
               timeout-minutes: 10
+
         outputs:
             PROJECTFOLDER: ${{ needs.prepare.outputs.PROJECTFOLDER }}
             PROJECTID: ${{ needs.prepare.outputs.PROJECTID }}
@@ -245,15 +234,12 @@ jobs:
             LUNCH: ${{ needs.prepare.outputs.LUNCH }}
 
     build:
-        name: Build using foss.crave.io
-        needs:
-            test
-            # Change this to self-hosted after setting up devspace as github actions runner
+        name: Build Using Crave
+        needs: test
         runs-on: ubuntu-latest
         concurrency:
             group: ${{ github.actor }}
         steps:
-            # Accept Project Variables
             - name: Set Repo Project
               run: |
                   PROJECTFOLDER="${{ needs.test.outputs.PROJECTFOLDER }}"
@@ -266,18 +252,16 @@ jobs:
                   echo "REPO_INIT=$REPO_INIT" >> "$GITHUB_ENV"
                   echo "LUNCH=$LUNCH" >> "$GITHUB_ENV"
 
-              # Create a project folder
             - name: Create Project Folders
               run: |
-
                   if [ "${DCDEVSPACE}" != "1" ]; then
-                    echo "Symlinking devspace folder"
+                    echo "Symlinking Devspace Folder"
                     mkdir -p devspace
                     sudo mkdir -p /crave-devspaces
                     sudo ln -sf ${pwd}/devspace /crave-devspaces
                     sudo chmod 777 /crave-devspaces
                   else
-                    echo "We are already running in devspace... Skipping Symlinks"
+                    echo "We Are Already Running In Devspace... Skipping Symlinks"
                   fi
                   if grep -q "$PROJECTFOLDER" <(crave clone list --json | jq -r '.clones[]."Cloned At"') && [ "${DCDEVSPACE}" == "1" ]; then
                     crave clone destroy -y $PROJECTFOLDER || echo "Error removing $PROJECTFOLDER"
@@ -286,49 +270,38 @@ jobs:
                   fi
 
                   if [ "${DCDEVSPACE}" == "1" ]; then
-                    crave clone create --projectID $PROJECTID $PROJECTFOLDER || echo "Crave clone create failed!"
+                    crave clone create --projectID $PROJECTID $PROJECTFOLDER || echo "Crave Clone Create Failed!"
                   else
                     mkdir $PROJECTFOLDER
                   fi
 
-              # Check-out in order to access the repository's files.
-            - name: Check-out to repository
+            - name: Checkout Repository
               uses: actions/checkout@v4
 
-              # Set-up a spearate directory for the device.
-            - name: Set-up workspace environment
+            - name: Setup Workspace Environment
               run: |
                   mkdir ${{ github.event.inputs.DEVICE_NAME }}
                   cd ${{ github.event.inputs.DEVICE_NAME }}
               continue-on-error: true
 
-              # Download and configure 'repo'.
-            - name: Configure the 'repo' environment
+            - name: Configure Repository Environment
               run: |
-                  # Check if repo is already installed
                   if ! command -v repo >/dev/null 2>&1; then
-                    echo "Repo not found. Installing now..."
-                    # Create bin directory if it doesn't exist
+                    echo "Repo Not Found. Installing Now..."
                     mkdir -p ~/bin
-                    # Download repo script
-                    curl https://storage.googleapis.com/git-repo-downloads/repo >> ~/bin/repo
-                    # Make repo script executable
-                    chmod a+x ~/bin/repo
-                    # Create symbolic link to /usr/bin/repo
+                    curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo
+                    chmod a+rx ~/bin/repo
                     sudo ln -sf "/home/$(whoami)/bin/repo" "/usr/bin/repo"
-                    echo "Repo installation complete."
                   else
-                    echo "Repo already installed."
+                    echo "Repo Already Installed."
                   fi
               continue-on-error: true
 
-              # Generate 'git' credential in base of the workflow's author.
-            - name: Set-up 'git' credential(s)
+            - name: Configure Git Credentials
               run: |
                   git config --global user.name "${{ github.actor }}"
                   git config --global user.email "${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com"
 
-              # Send Build 'start' notification
             - name: Telegram Notification
               continue-on-error: true
               uses: xinthink/action-telegram@v1.1
@@ -338,12 +311,11 @@ jobs:
                   jobStatus: "Build Started"
                   skipSuccess: false
 
-              # Download and configure 'crave'.
-            - name: Configure the 'crave' environment
+            - name: Setup Crave Environment
               run: |
                   mkdir -p $PROJECTFOLDER/.repo/manifests
                   if [ "${DCDEVSPACE}" == "1" ]; then
-                    echo 'No need to set up crave, we are already running in devspace!'
+                    echo 'No Need To Setup Crave, We Are Already Running In Devspace!'
                   else
                     curl -s https://raw.githubusercontent.com/accupara/crave/master/get_crave.sh | bash -s --
                     mv ${PWD}/crave ${HOME}/bin/
@@ -364,8 +336,7 @@ jobs:
                   CRAVE_USERNAME: ${{  secrets.CRAVE_USERNAME  }}
                   CRAVE_TOKEN: ${{  secrets.CRAVE_TOKEN  }}
 
-              # Initialize the previously choosen 'repo' project.
-            - name: Set the 'crave' project
+            - name: Set Crave Project
               run: |
                   cd $PROJECTFOLDER
                   echo "Running $REPO_INIT"
@@ -379,10 +350,9 @@ jobs:
                     echo "Building $BUILD_DIFFERENT_ROM"
                   fi
                   echo "BUILD_DIFFERENT_ROM=$BUILD_DIFFERENT_ROM" >> "$GITHUB_ENV"
-                  echo "We will be building with $LUNCH"
+                  echo "We Will Be Building With $LUNCH"
 
-              # Create a 'crave' job for building.
-            - name: Start compilation through 'crave'
+            - name: Compile With Crave
               if: ${{ github.event.inputs.BUILD_DIFFERENT_ROM != 'skip' }}
               run: |
                   cd $PROJECTFOLDER
@@ -404,7 +374,7 @@ jobs:
                   # Sync the repositories
                   /opt/crave/resync.sh  && \
 
-                  # Set up build environment
+                  # Setup build environment
                   export BUILD_USERNAME=${{ github.actor }} ; \
                   export BUILD_HOSTNAME=crave ; \
                   source build/envsetup.sh && \
@@ -417,7 +387,6 @@ jobs:
                   make installclean && \
                   ${{ github.event.inputs.BUILD_COMMAND }}"
 
-              # Send Build 'status' notification
             - name: Telegram Notification
               if: ${{ success()  || cancelled() || failure() }}
               continue-on-error: true
@@ -428,22 +397,19 @@ jobs:
                   jobStatus: ${{ job.status }}
                   skipSuccess: false
 
-              # Only reach this wheter the user killed the workflow.
-            - name: Execute if the job is cancelled
+            - name: Handle Job Cancellation
               if: ${{ cancelled() }}
               run: |
                   cd $PROJECTFOLDER
                   crave stop --all
 
-              # Upload '.zip's and '.img's directly from 'crave' ssh.
-            - name: Upload build artifact(s)
+            - name: Upload Build Artifacts
               run: |
                   cd $PROJECTFOLDER
                   echo "${{ secrets.GITHUB_TOKEN }}" > token.txt
                   crave push token.txt -d $(crave ssh -- pwd | grep -v Select | sed -s 's/\r//g')/
                   crave ssh -- "export GH_UPLOAD_LIMIT="${{ secrets.GH_UPLOAD_LIMIT }}"; bash /opt/crave/github-actions/upload.sh '${{ github.run_id }}' '${{ github.event.inputs.DEVICE_NAME }}'  '${{ github.repository }}' '${{ github.event.inputs.PRODUCT_NAME }}-${{ github.run_id }}' '${{ secrets.EXTRA_FILES }}'"
 
-              # Pull Errors and Display them
             - name: Display error.log
               if: ${{ failure() }}
               id: errorlog
@@ -453,4 +419,3 @@ jobs:
                   crave pull out/error.log
                   echo "Displaying out/error.log"
                   cat out/error.log
-                  #if [[ -z "${{ secrets.CUSTOM_YAML }}" ]]; then
